--- a/css/main.css
+++ b/css/main.css
@@ -2,4 +2,116 @@
 
 * {
 	font-family: 'Montserrat', sans-serif;
+	box-sizing: border-box;
+}
+
+.container {
+	width: 100%
+	padding-left: 15px;
+	padding-right: 15px;
+	margin-right: auto;
+	margin-left: auto; 
+}
+
+@media (min-width: 576px) {
+	.container {
+		max-width: 540px;
+	}	
+}
+
+@media (min-width: 768px) {
+	.container {
+		max-width: 720px;
+	}
+}
+
+@media (min-width: 960px) {
+	.container {
+		max-width: 960px;
+	}
+}
+
+@media (min-width: 1200px) {
+	.container {
+		max-width: 1170px;
+	}
+}
+
+.logo {
+	position: absolute;
+	width: 100px;
+	left: 204px;
+	top: 26px;
+}
+
+ul {
+	list-style-type: none;
+	margin-top: 50px;
+	padding: 0;
+	overflow: hidden;
+	background-color: #fff;
+	display: flex;
+  	justify-content: flex-end;
+}
+
+
+li a, .dropbtn {
+  display: inline-block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover, .dropdown:hover .dropbtn {
+  color: red;
+}
+
+li.dropdown {
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1;}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.submenu {
+	display: none;
+}
+
+.slideshow-container {
+	position: absolute;
+	width: 1070px;
+	left: 194px;
+	top: 156px;
+}
+
+.popular-title {
+	position: absolute;
+	width: 420px;
+	height: 54px;
+	left: 195px;
+	font-weight: 600;
+	font-size: 24px;
+	line-height: 12px;
+	color: #000;
 }
