--- a/css/main.css
+++ b/css/main.css
@@ -5,113 +5,94 @@
 	box-sizing: border-box;
 }
 
-.container {
-	width: 100%
-	padding-left: 15px;
-	padding-right: 15px;
+.header-container {
+	width: 100%;
+	margin-top: 10px;
 	margin-right: auto;
-	margin-left: auto; 
+	margin-left: auto;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 
 @media (min-width: 576px) {
-	.container {
+	.header-container {
 		max-width: 540px;
 	}	
 }
 
 @media (min-width: 768px) {
-	.container {
+	.header-container {
 		max-width: 720px;
 	}
 }
 
 @media (min-width: 960px) {
-	.container {
+	.header-container {
 		max-width: 960px;
 	}
 }
 
 @media (min-width: 1200px) {
-	.container {
-		max-width: 1170px;
+	.header-container {
+		max-width: 1720px;
 	}
 }
 
-.logo {
-	position: absolute;
-	width: 100px;
-	left: 204px;
-	top: 26px;
+.logo-link {
+	display: block;
 }
 
 ul {
-	list-style-type: none;
-	margin-top: 50px;
 	padding: 0;
-	overflow: hidden;
-	background-color: #fff;
-	display: flex;
-  	justify-content: flex-end;
 }
 
+.nav-menu {
+	list-style: none;
+	display: flex;
+}
 
-li a, .dropbtn {
+.nav-menu li a {
+	font-size: 24px;
+}
+
+.nav-menu li:hover .submenu {
+	display: block;
+}
+
+li a {
   display: inline-block;
   color: black;
-  text-align: center;
   padding: 14px 16px;
   text-decoration: none;
 }
 
-li a:hover, .dropdown:hover .dropbtn {
+li a:hover {
   color: red;
-}
-
-li.dropdown {
-  display: inline-block;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.dropdown-content a:hover {background-color: #f1f1f1;}
-
-.dropdown:hover .dropdown-content {
-  display: block;
 }
 
 .submenu {
 	display: none;
+    list-style: none;
+    position: absolute;
+    background: #fff;
 }
 
 .slideshow-container {
-	position: absolute;
-	width: 1070px;
-	left: 194px;
-	top: 156px;
+ 	display: flex;
+ 	justify-content: center; 
 }
 
+.slideshow {
+	width: 1720px;
+    margin-top: 20px;
+}
+
+.popular-product-list {
+	display: flex;
+	list-style: none;
+	flex-wrap: wrap;
+}
 .popular-title {
-	position: absolute;
-	width: 420px;
-	height: 54px;
-	left: 195px;
-	font-weight: 600;
 	font-size: 24px;
-	line-height: 12px;
-	color: #000;
 }
