--- a/css/main.css
+++ b/css/main.css
@@ -35,12 +35,16 @@
 
 @media (min-width: 1200px) {
 	.header-container {
-		max-width: 1720px;
+		max-width: 1170px;
 	}
 }
 
 .logo-link {
 	display: block;
+}
+
+.logo {
+	width: 100px;
 }
 
 ul {
@@ -53,7 +57,7 @@ ul {
 }
 
 .nav-menu li a {
-	font-size: 24px;
+	font-size: 16px;
 }
 
 .nav-menu li:hover .submenu {
@@ -88,11 +92,142 @@ li a:hover {
     margin-top: 20px;
 }
 
+.popular-product-section {
+	margin-top: 60px;
+}
+
+.popular-container {
+	width: 100%;
+	margin-right: auto;
+	margin-left: auto;
+}
+
+@media (min-width: 576px) {
+	.popular-container {
+		max-width: 540px;
+	}	
+}
+
+@media (min-width: 768px) {
+	.popular-container {
+		max-width: 720px;
+	}
+}
+
+@media (min-width: 960px) {
+	.popular-container {
+		max-width: 960px;
+	}
+}
+
+@media (min-width: 1200px) {
+	.popular-container {
+		max-width: 1170px;
+	}
+}
+
 .popular-product-list {
 	display: flex;
 	list-style: none;
 	flex-wrap: wrap;
 }
+
 .popular-title {
-	font-size: 24px;
+	font-size: 20px;
+}
+
+.company-container {
+	width: 100%;
+	margin-right: auto;
+	margin-left: auto; 
+}
+
+@media (min-width: 576px) {
+	.company-container {
+		max-width: 540px;
+	}	
+}
+
+@media (min-width: 768px) {
+	.company-container {
+		max-width: 720px;
+	}
+}
+
+@media (min-width: 960px) {
+	.company-container {
+		max-width: 960px;
+	}
+}
+
+@media (min-width: 1200px) {
+	.company-container {
+		max-width: 1170px;
+	}
+}
+
+.company {
+	font-size: 20px;
+}
+
+.text {
+	font-size: 10px;
+}
+
+.blog-container {
+	width: 100%;
+	margin-right: auto;
+	margin-left: auto; 
+	display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+@media (min-width: 576px) {
+	.blog-container {
+		max-width: 540px;
+	}	
+}
+
+@media (min-width: 768px) {
+	.blog-container {
+		max-width: 720px;
+	}
+}
+
+@media (min-width: 960px) {
+	.blog-container {
+		max-width: 960px;
+	}
+}
+
+@media (min-width: 1200px) {
+	.blog-container {
+		max-width: 1170px;
+	}
+}
+
+.blog-title {
+	font-size: 20px;
+}
+
+.blog-img {
+	width: 230px;
+}
+
+.blog-post {
+	width: 230px;
+}
+
+a {
+	text-decoration: none;
+	color: #000;
+}
+
+h4 {
+	font-size: 12px;
+}
+
+p {
+	font-size: 8px;
 }
